[package]
name = "confidential-benchmarks"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
description = "Comprehensive TPS benchmarks for confidential assets"

[dependencies]
# ZK verification
zkhe-verifier = { path = "../zkhe-verifier" }
zkhe-prover = { path = "../zkhe-prover" }
zkhe-vectors = { path = "../zkhe-vectors" }
zkhe-primitives = { path = "../primitives/zkhe" }
confidential-assets-primitives = { path = "../primitives/confidential-assets" }

# Substrate/Frame
frame-support = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }

# Crypto
curve25519-dalek = { version = "4.1.3", features = ["alloc"] }
rand = "0.8"
rand_chacha = "0.3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = ["std"]
std = [
    "zkhe-verifier/std",
    "zkhe-primitives/std",
    "confidential-assets-primitives/std",
]

[[bin]]
name = "tps-report"
path = "src/main.rs"

[[bench]]
name = "verification"
harness = false

[[bench]]
name = "block_filling"
harness = false
