[package]
name = "confidential-benchmarks"
authors = { workspace = true }
description = "Comprehensive TPS benchmarks for confidential assets"
edition = "2024"
license = { workspace = true }
version = "0.1.0"

[[bin]]
name = "tps-report"
path = "src/main.rs"

[dependencies]
# ZK verification
confidential-assets-primitives = { path = "../primitives/confidential-assets" }
zkhe-primitives = { path = "../primitives/zkhe" }
zkhe-prover = { path = "../zkhe-prover" }
zkhe-vectors = { path = "../zkhe-vectors" }
zkhe-verifier = { path = "../zkhe-verifier" }

# Substrate/Frame
frame-support = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

# Crypto
curve25519-dalek = { version = "4.1.3", features = [ "alloc" ] }
rand = "0.8"
rand_chacha = "0.3"

# Benchmarking
criterion = { version = "0.5", features = [ "html_reports" ] }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }

[features]
default = [ "std" ]
std = [
	"confidential-assets-primitives/std",
	"zkhe-primitives/std",
	"zkhe-verifier/std",
]

[[bench]]
name = "verification"
harness = false

[[bench]]
name = "block_filling"
harness = false
