[package]
name = "pvm-runtime"
authors = { workspace = true }
description = "PolkaVM runtime with confidential assets and pallet-revive"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
confidential-assets-primitives = { path = "../primitives/confidential-assets", default-features = false }
confidential-assets-revive-precompile = { path = "../precompiles/confidential-assets-revive", default-features = false }
docify = { workspace = true }
hex-literal = { workspace = true, default-features = true, optional = true }
log = { workspace = true }
pallet-confidential-assets = { path = "../pallets/confidential-assets", default-features = false }
pallet-zkhe = { path = "../pallets/zkhe", default-features = false }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
polkadot-sdk = { workspace = true, default-features = false, features = [ "cumulus-pallet-aura-ext", "cumulus-pallet-session-benchmarking", "cumulus-pallet-weight-reclaim", "cumulus-pallet-xcm", "cumulus-pallet-xcmp-queue", "cumulus-primitives-aura", "cumulus-primitives-core", "cumulus-primitives-utility", "pallet-assets", "pallet-aura", "pallet-authorship", "pallet-balances", "pallet-collator-selection", "pallet-message-queue", "pallet-revive", "pallet-session", "pallet-sudo", "pallet-timestamp", "pallet-transaction-payment", "pallet-transaction-payment-rpc-runtime-api", "pallet-xcm", "parachains-common", "polkadot-parachain-primitives", "polkadot-runtime-common", "runtime", "staging-parachain-info", "staging-xcm", "staging-xcm-builder", "staging-xcm-executor" ] }
scale-info = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true, default-features = false, features = [ "alloc" ] }
smallvec = { workspace = true, default-features = true }
zkhe-verifier = { path = "../zkhe-verifier", default-features = false }

[dependencies.cumulus-pallet-parachain-system]
workspace = true

[build-dependencies]
docify = { workspace = true }
substrate-wasm-builder = { workspace = true, default-features = true, optional = true }

[features]
default = [ "std" ]
std = [
	"confidential-assets-primitives/std",
	"confidential-assets-revive-precompile/std",
	"cumulus-pallet-parachain-system/std",
	"log/std",
	"pallet-confidential-assets/std",
	"pallet-zkhe/std",
	"parity-scale-codec/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde_json/std",
	"substrate-wasm-builder",
	"zkhe-verifier/std",
]

runtime-benchmarks = [
	"confidential-assets-revive-precompile/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"hex-literal",
	"pallet-confidential-assets/runtime-benchmarks",
	"pallet-zkhe/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"polkadot-sdk/try-runtime",
]

# Enable the metadata hash generation in the wasm builder.
metadata-hash = [ "substrate-wasm-builder/metadata-hash" ]

# A feature that should be enabled when the runtime should be built for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller, like logging for example.
on-chain-release-build = [ "metadata-hash" ]
