[package]
name = "pallet-acl"
authors = { workspace = true }
description = "pallet implementing ACL for confidential assets"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"
[dependencies]

frame-support = { workspace = true }
frame-system  = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime    = { workspace = true }
sp-std = { workspace = true }

confidential-assets-primitives = { path = "../../primitives/confidential-assets", default-features = false }

[features]
default = [ "std" ]
std = [
	"confidential-assets-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
