[package]
name = "pallet-confidential-assets"
authors = { workspace = true }
description = "pallet supporting confidential transfers"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system  = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime    = { workspace = true }
sp-std = { workspace = true }

confidential-assets-primitives = { path = "../../primitives/confidential-assets", default-features = false }

# Benchmarking vectors (deterministic proofs for real verification)
zkhe-vectors = { path = "../../zkhe/vectors", default-features = false, optional = true }

[dev-dependencies]
pallet-zkhe = { path = "../zkhe" }
proptest = "1.5"
sp-io = { workspace = true }

[features]
default = [ "std" ]
std = [
	"confidential-assets-primitives/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"zkhe-vectors?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"zkhe-vectors",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
