[package]
name = "pallet-confidential-bridge"
authors = { workspace = true }
description = "pallet supporting confidential cross-chain transfers"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
frame-support = { workspace = true }
frame-system  = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime    = { workspace = true }
sp-std = { workspace = true }

confidential-assets-primitives = { path = "../../primitives/confidential-assets", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
pallet-zkhe = { path = "../zkhe" }
pallet-confidential-escrow = { path = "../confidential-escrow" }

[features]
default = [ "std" ]
std = [
	"confidential-assets-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
