[package]
name = "pallet-confidential-escrow"
authors = { workspace = true }
description = "pallet implementing trustless multi-asset escrow with encrypted amounts"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
frame-support = { workspace = true }
frame-system  = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-io = { workspace = true }
sp-runtime    = { workspace = true }
sp-std = { workspace = true }

confidential-assets-primitives = { path = "../../primitives/confidential-assets", default-features = false }

[dev-dependencies]
pallet-zkhe = { path = "../zkhe" }
sp-io = { workspace = true }

[features]
default = [ "std" ]
std = [
	"confidential-assets-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
