[package]
name = "confidential-assets-precompile"
authors = { workspace = true }
description = "Chain extension exposing confidential assets to pallet-revive contracts"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
confidential-assets-primitives = { path = "../../primitives/confidential-assets", default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-confidential-assets = { path = "../../pallets/confidential-assets", default-features = false }
pallet-revive = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = [ "std" ]
std = [
	"confidential-assets-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-confidential-assets/std",
	"pallet-revive/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-confidential-assets/runtime-benchmarks",
	"pallet-revive/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-revive/try-runtime",
	"sp-runtime/try-runtime",
]
