[package]
name = "confidential-assets-primitives"
authors = { workspace = true }
description = "types and traits for polkadot confidential assets"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"
[dependencies]
frame-support = { workspace = true }
frame-system  = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime    = { workspace = true }
sp-std = { workspace = true }

# no_std crypto
blake2 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4.1", default-features = false, features = [ "alloc" ] }

[features]
default = [ "std" ]
std = [
	"blake2/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
