[package]
name = "confidential-assets-primitives"
authors = { workspace = true }
description = "types and traits for polkadot confidential assets"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
frame-support = { workspace = true }
frame-system  = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime    = { workspace = true }
sp-std = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
