[package]
name = "zkhe-primitives"
authors = { workspace = true }
description = "Primitives shared between ZK ElGamal Verifier and Prover"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"
[dependencies]
frame-support = { workspace = true }
frame-system  = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-runtime    = { workspace = true }
sp-std = { workspace = true }

# no_std crypto
curve25519-dalek = { version = "4.1", default-features = false, features = [ "alloc" ] }
merlin            = { version = "3", default-features = false }
subtle            = { version = "2", default-features = false }

sha2 = { version = "0.10.9", default-features = false }

[features]
default = [ "std" ]
std = [
	"dep:serde",
	"frame-support/std",
	"frame-system/std",
	"merlin/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sha2/std",
	"sp-runtime/std",
	"sp-std/std",
	"subtle/std",
]
