[package]
name = "asset-hub-runtime"
authors = { workspace = true }
description = "test runtime configuring asset hub pallets sans revive"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
docify = { workspace = true }
hex-literal = { workspace = true, default-features = true, optional = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
polkadot-sdk = { workspace = true, default-features = false, features = [ "cumulus-pallet-aura-ext", "cumulus-pallet-session-benchmarking", "cumulus-pallet-weight-reclaim", "cumulus-pallet-xcm", "cumulus-pallet-xcmp-queue", "cumulus-primitives-aura", "cumulus-primitives-core", "cumulus-primitives-utility", "pallet-assets","pallet-asset-conversion", "pallet-asset-tx-payment", "assets-common", "pallet-aura", "pallet-authorship", "pallet-balances", "pallet-collator-selection", "pallet-message-queue", "pallet-session", "pallet-sudo", "pallet-timestamp", "pallet-transaction-payment", "pallet-transaction-payment-rpc-runtime-api", "pallet-treasury", "pallet-xcm", "parachains-common", "polkadot-parachain-primitives", "polkadot-runtime-common", "runtime", "staging-parachain-info", "staging-xcm", "staging-xcm-builder", "staging-xcm-executor", "testnet-parachains-constants" ] }
scale-info = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true, default-features = false, features = [ "alloc" ] }
smallvec = { workspace = true, default-features = true }

[dependencies.cumulus-pallet-parachain-system]
workspace = true

[build-dependencies]
docify = { workspace = true }
substrate-wasm-builder = { workspace = true, default-features = true, optional = true }

[features]
default = [ "std" ]
std = [
	"cumulus-pallet-parachain-system/std",
	"log/std",
	"parity-scale-codec/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde_json/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"hex-literal",
	"polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"polkadot-sdk/try-runtime",
]

# Enable the metadata hash generation in the wasm builder.
metadata-hash = [ "substrate-wasm-builder/metadata-hash" ]

# A feature that should be enabled when the runtime should be built for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller, like logging for example.
on-chain-release-build = [ "metadata-hash" ]
